--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,16 @@
+annotated-types==0.7.0
 dishka==1.2.0
+dnspython==2.6.1
 iniconfig==2.0.0
+motor==3.4.0
 packaging==24.0
 pluggy==1.5.0
+pyclean==3.0.0
+pydantic==2.7.3
+pydantic-settings==2.3.0
+pydantic_core==2.18.4
+pymongo==4.7.3
 pytest==8.2.1
+pytest-asyncio==0.23.7
+python-dotenv==1.0.1
+typing_extensions==4.12.1
