Update gitignore, add precommit hook, set rules for fmt and linter

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,22 @@
 annotated-types==0.7.0
+black==24.4.2
+cfgv==3.4.0
+click==8.1.7
 dishka==1.2.0
+distlib==0.3.8
 dnspython==2.6.1
+filelock==3.15.1
+identify==2.5.36
 iniconfig==2.0.0
+isort==5.13.2
 motor==3.4.0
+mypy-extensions==1.0.0
+nodeenv==1.9.1
 packaging==24.0
+pathspec==0.12.1
+platformdirs==4.2.2
 pluggy==1.5.0
+pre-commit==3.7.1
 pyclean==3.0.0
 pydantic==2.7.3
 pydantic-settings==2.3.0
@@ -13,4 +25,7 @@ pymongo==4.7.3
 pytest==8.2.1
 pytest-asyncio==0.23.7
 python-dotenv==1.0.1
+PyYAML==6.0.1
+ruff==0.4.8
 typing_extensions==4.12.1
+virtualenv==20.26.2
