--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 annotated-types==0.7.0
 anyio==4.4.0
+black==24.4.2
 CacheControl==0.14.0
 cachetools==5.3.3
 certifi==2024.6.2
@@ -34,14 +35,18 @@ httptools==0.6.1
 httpx==0.27.0
 idna==3.7
 iniconfig==2.0.0
+isort==5.13.2
 Jinja2==3.1.4
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
 motor==3.4.0
 msgpack==1.0.8
+mypy-extensions==1.0.0
 orjson==3.10.5
 packaging==24.0
+pathspec==0.12.1
+platformdirs==4.2.2
 pluggy==1.5.0
 proto-plus==1.23.0
 protobuf==4.25.3
@@ -65,6 +70,7 @@ PyYAML==6.0.1
 requests==2.32.3
 rich==13.7.1
 rsa==4.9
+ruff==0.4.8
 shellingham==1.5.4
 six==1.16.0
 sniffio==1.3.1
