--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,23 @@
 annotated-types==0.7.0
 anyio==4.4.0
+black==24.4.2
 CacheControl==0.14.0
 cachetools==5.3.3
 certifi==2024.6.2
 cffi==1.16.0
+cfgv==3.4.0
 charset-normalizer==3.3.2
 click==8.1.7
 cryptography==42.0.8
 dishka==1.2.0
+distlib==0.3.8
 dnspython==2.6.1
 email_validator==2.1.1
 exceptiongroup==1.2.1
 Faker==25.5.0
 fastapi==0.111.0
 fastapi-cli==0.0.4
+filelock==3.15.1
 firebase-admin==6.5.0
 google-api-core==2.19.0
 google-api-python-client==2.133.0
@@ -32,17 +36,24 @@ httpcore==1.0.5
 httplib2==0.22.0
 httptools==0.6.1
 httpx==0.27.0
+identify==2.5.36
 idna==3.7
 iniconfig==2.0.0
+isort==5.13.2
 Jinja2==3.1.4
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
 motor==3.4.0
 msgpack==1.0.8
+mypy-extensions==1.0.0
+nodeenv==1.9.1
 orjson==3.10.5
 packaging==24.0
+pathspec==0.12.1
+platformdirs==4.2.2
 pluggy==1.5.0
+pre-commit==3.7.1
 proto-plus==1.23.0
 protobuf==4.25.3
 pyasn1==0.6.0
@@ -58,6 +69,7 @@ pymongo==4.7.3
 pyparsing==3.1.2
 pytest==8.2.1
 pytest-asyncio==0.23.7
+pytest-mock==3.14.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-multipart==0.0.9
@@ -65,6 +77,7 @@ PyYAML==6.0.1
 requests==2.32.3
 rich==13.7.1
 rsa==4.9
+ruff==0.4.8
 shellingham==1.5.4
 six==1.16.0
 sniffio==1.3.1
@@ -77,5 +90,6 @@ uritemplate==4.1.1
 urllib3==2.2.1
 uvicorn==0.30.1
 uvloop==0.19.0
+virtualenv==20.26.2
 watchfiles==0.22.0
 websockets==12.0
