--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 annotated-types==0.7.0
 anyio==4.4.0
+black==24.4.2
 CacheControl==0.14.0
 cachetools==5.3.3
 certifi==2024.6.2
@@ -43,9 +44,11 @@ MarkupSafe==2.1.5
 mdurl==0.1.2
 motor==3.5.0
 msgpack==1.0.8
+mypy-extensions==1.0.0
 nodeenv==1.9.1
 orjson==3.10.5
 packaging==24.1
+pathspec==0.12.1
 platformdirs==4.2.2
 pluggy==1.5.0
 pre-commit==3.7.1
