--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,8 @@ dishka==1.2.0
 distlib==0.3.8
 dnspython==2.6.1
 email_validator==2.2.0
+exceptiongroup==1.2.1
+Faker==25.5.0
 fastapi==0.111.0
 fastapi-cli==0.0.4
 filelock==3.15.4
@@ -52,10 +54,12 @@ pathspec==0.12.1
 platformdirs==4.2.2
 pluggy==1.5.0
 pre-commit==3.7.1
+prometheus_client==0.20.0
 proto-plus==1.24.0
 protobuf==4.25.3
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
+pyclean==3.0.0
 pycparser==2.22
 pydantic==2.8.0
 pydantic-settings==2.3.4
@@ -67,6 +71,7 @@ pyparsing==3.1.2
 pytest==8.2.2
 pytest-asyncio==0.23.7
 pytest-mock==3.14.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-multipart==0.0.9
 PyYAML==6.0.1
@@ -75,8 +80,11 @@ rich==13.7.1
 rsa==4.9
 ruff==0.5.0
 shellingham==1.5.4
+six==1.16.0
 sniffio==1.3.1
 starlette==0.37.2
+starlette_exporter==0.23.0
+tomli==2.0.1
 typer==0.12.3
 typing_extensions==4.12.2
 ujson==5.10.0
