--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,3 +11,8 @@ repos:
         entry: make fmt
         language: system
         types: [python]
+      - id: testslocal
+        name: testslocal
+        entry: make testslocal
+        language: system
+        types: [python]
