--- a/infra/docker/loki/loki_config.yaml
+++ b/infra/docker/loki/loki_config.yaml
@@ -1,15 +1,14 @@
 auth_enabled: false
 
 server:
-  http_listen_port: ${LOKI_PORT}
-  grpc_listen_port: ${LOKI_GRPC_PORT}
-
+  http_listen_port: 3100
+  grpc_listen_port: 9096
 
 ingester:
   wal:
       dir: "/tmp/wal"
   lifecycler:
-    address: ${LOKI_HOST} 
+    address: loki
     ring: 
       replication_factor: 1
       kvstore:
@@ -23,24 +22,12 @@ storage_config:
   filesystem:
     directory: /tmp/loki/chunks
 
-
-schema_config: 
+schema_config:
   configs:
-    - from: 2020-01-01 
-      store: boltdb 
-      object_store: filesystem 
+    - from: 2020-01-01
+      store: boltdb
+      object_store: filesystem
       schema: v11
       index:
         prefix: index_
-        period: 168h 
-
-# auth_config:
-#   backend: basic
-#   basic_auth:
-#     users:
-#       - username: $LOKI_USERNAME
-#         password: $LOKI_PASSWORD
-
-
-# ruler:
-#   alertmanager_url: $LOKI_ALERT_MANAGER_HOST:$LOKI_ALERT_MANAGER_PORT
+        period: 168h
