--- a/docker-compose.metrics.yaml
+++ b/docker-compose.metrics.yaml
@@ -80,6 +80,7 @@ services:
       - GF_SECURITY_ADMIN_USER=$GF_SECURITY_ADMIN_USER
       - GF_SECURITY_ADMIN_PASSWORD=$GF_SECURITY_ADMIN_PASSWORD
       - GF_USERS_ALLOW_SIGN_UP=false
+    user: "0:0"
     env_file:
       - .env
 
