--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -26,7 +26,6 @@ services:
       - db-logs:/var/log/mongodb/
       - ./infra/docker/mongo/init_mongo.js:/docker-entrypoint-initdb.d/init_mongo.js:ro
 
-
   prometheus:
     image: prom/prometheus
     restart: unless-stopped
@@ -80,6 +79,8 @@ services:
       - GF_SECURITY_ADMIN_USER=$GF_SECURITY_ADMIN_USER
       - GF_SECURITY_ADMIN_PASSWORD=$GF_SECURITY_ADMIN_PASSWORD
       - GF_USERS_ALLOW_SIGN_UP=false
+    user:
+      "0:0"
     env_file:
       - .env
 
