--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -8,7 +8,7 @@ services:
       - $APP_PORT:$APP_PORT
     command: python -m src.presentation.http.app
     env_file:
-      - local.env
+      - .env
     depends_on:
       - db
 
@@ -18,7 +18,7 @@ services:
     ports:
       - $MONGODB_PORT:$MONGODB_PORT
     env_file:
-      - local.env
+      - .env
     volumes:
       - db-logs:/var/log/mongodb/
       - ./infra/docker/mongo/init_mongo.js:/docker-entrypoint-initdb.d/init_mongo.js:ro
