--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,8 +11,9 @@ repos:
         entry: make fmt
         language: system
         types: [python]
-      - id: testslocal
-        name: testslocal
-        entry: make testslocal
+      - id: tests
+        name: test local
+        entry: make test
         language: system
+        pass_filenames: false
         types: [python]
